# Breakout

./: CMakeLists.txt  breakout.cpp  game.cpp  game.h  glad.c  resource_manager.cpp  shader.cpp  shader.h  texture.cpp  texture.h
include/glad/: glad.h
